tests/testcases/errors/BCE0111-1.boo
"""
BCE0111-1.boo(5,18): BCE0111: Destructors cannot have any attributes or modifiers
"""
class Burninator:
	abstract def destructor ():
		print "BURNINATE!"
